# classification-ml

classification-ml/: Como configurar Ambiente  README.md  pyproject.toml  teste.ipynb
